# haskell-google-sheets

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  google-sheets.cabal  run-tests.sh
.github/workflows/: ci.yaml  main.yaml
app/: Credentials.hs  Main.hs  Types.hs
lib/Web/Google/: Sheets.hs
lib/Web/Google/Sheets/: FromSheet.hs  FromSheetDimension.hs  FromSheetValue.hs  Spreadsheets.hs  Types.hs
lib/Web/Google/Sheets/Spreadsheets/: Values.hs
lib/Web/Google/Sheets/Spreadsheets/Values/: FromSheet.hs  SheetValue.hs  ToSheet.hs  Types.hs
test/: Main.hs
