cabal-version:   3.8
name:            google-sheets
version:         0.1.0.0
synopsis:        Library for interacting with Google Sheets API
license:         MIT
license-file:    LICENSE
author:          Olli Kortelahti
maintainer:      ollikortelahti@gmail.com
copyright:       Olli Kortelahti
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.2.8 || ==9.4.5 || ==9.6.2

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Web.Google.Sheets
    Web.Google.Sheets.Spreadsheets.Values
    Web.Google.Sheets.Spreadsheets.Values.FromSheet
    Web.Google.Sheets.Spreadsheets.Values.SheetValue
    Web.Google.Sheets.Spreadsheets.Values.ToSheet
    Web.Google.Sheets.Types

  build-depends:
    , aeson       >=2.2.0  && <2.3
    , base        >=4.16.0 && <4.19
    , bytestring  >=0.11.4 && <0.12
    , req         >=3.13.1 && <3.14
    , scientific  >=0.3.7  && <0.4
    , text        >=2.0.2  && <2.1
    , vector      >=0.13.0 && <0.14

  hs-source-dirs:   lib
  default-language: GHC2021

-- executable google-sheets
--   import:           warnings
--   main-is:          Main.hs
--   other-modules:
--     Credentials
--     Types

--   -- other-extensions:
--   build-depends:
--     , aeson
--     , base           ^>=4.17.1.0
--     , bytestring
--     , cryptonite
--     , google-sheets
--     , jose
--     , lens
--     , monad-time
--     , mtl
--     , req
--     , text
--     , time
--     , vector
--     , x509
--     , x509-store

--   hs-source-dirs:   app
--   default-language: GHC2021

test-suite google-sheets-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , google-sheets
