cabal-version:   3.8
name:            google-sheets
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
copyright:       Olli Kortelahti
maintainer:      ollikortelahti@gmail.com
author:          Olli Kortelahti
tested-with:     GHC ==9.2.8 || ==9.4.5 || ==9.6.2
synopsis:        Library for interacting with Google Sheets API
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md

library
  exposed-modules:
    Web.Google.Sheets
    Web.Google.Sheets.Spreadsheets.Values
    Web.Google.Sheets.Spreadsheets.Values.FromSheet
    Web.Google.Sheets.Spreadsheets.Values.ToSheet
    Web.Google.Sheets.Spreadsheets.Values.Types

  hs-source-dirs:   lib
  default-language: GHC2021
  ghc-options:      -O2 -Wall -Werror
  build-depends:
    , aeson       >=2.2.0  && <2.3
    , base        >=4.16.0 && <4.19
    , bytestring  >=0.11.4 && <0.12
    , req         >=3.13.1 && <3.14
    , scientific  >=0.3.7  && <0.4
    , text        >=2.0.2  && <2.1
    , vector      >=0.13.0 && <0.14

test-suite google-sheets-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , google-sheets
    , hspec
    , text
    , vector
